--- a/lib/boxing_web/components/layouts/root.html.heex
+++ b/lib/boxing_web/components/layouts/root.html.heex
@@ -35,8 +35,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js">
     </script>
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
   </head>
   <body class="bg-white antialiased">
     <%= @inner_content %>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js">
+    </script>
   </body>
 </html>
