--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -5,7 +5,8 @@
         <a class="underline" href="https://ai.meta.com/llama/">Llama2</a>
         has taken the world by storm. Many have
         claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>.
-        <br /><br /> The fight will be 10 rounds. Each round, pick the output you think is better.
+        <br /><br />
+        The fight will be first to 5 rounds. Each round, pick the output you think is better.
         <br /><br /> Enough talk. Let's settle this in the ring.
       </p>
       <button
@@ -21,9 +22,11 @@
         <dl class="mt-5 grid gap-5 grid-cols-2">
           <%= for score <- @score do %>
             <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow sm:p-6">
-              <dt class="truncate text-sm font-medium text-gray-500"><%= score.human_name %></dt>
+              <dt class="truncate text-sm font-medium text-gray-500">
+                <%= score.human_name %>
+              </dt>
               <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
-                <%= score.score %>
+                <%= score.score %> / <%= @winning_score %>
               </dd>
             </div>
           <% end %>
@@ -31,41 +34,61 @@
       </div>
     </div>
 
-    <form id="form" phx-submit="generate" class="mt-16" phx-hook="Confetti">
-      <div>
-        <label for="prompt" class="block font-medium leading-6 text-gray-900">
-          Prompt
-        </label>
-        <div class="mt-2">
-          <input
-            name="prompt"
-            placeholder="Enter your prompt..."
-            type="text"
-            id="prompt"
-            class="block w-full font-mono rounded-md border-0 text-xl py-3 px-4 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
-          />
-        </div>
-      </div>
-    </form>
+    <div class="mt-16">
+      <%= if @submitted do %>
+        <h5 class="text-4xl font-bold">"<%= @text_prompt %>"</h5>
+      <% else %>
+        <form id="submit-form" phx-submit="generate">
+          <div>
+            <label for="prompt" class="block font-medium leading-6 text-gray-900">
+              Prompt
+            </label>
+            <div class="mt-2">
+              <input
+                name="prompt"
+                required="true"
+                placeholder="Enter your prompt..."
+                type="text"
+                id="prompt"
+                value={@text_prompt}
+                phx-change="update-prompt"
+                class="block w-full font-mono rounded-md border-0 text-xl py-3 px-4 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:leading-6"
+              />
+            </div>
+          </div>
+          <div class="grid grid-cols-2 mt-4 gap-4">
+            <.button type="button" phx-click="inspire">Give me a prompt</.button>
+            <button class="font-fight text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500">
+              Fight!
+            </button>
+          </div>
+        </form>
+      <% end %>
+    </div>
 
-    <div class="mt-6">
-      <h5 :if={length(@prompts) == 2} class="text-center text-2xl font-extrabold">
-        Which is a better response to the prompt?
-      </h5>
-      <div class="grid grid-cols-2 gap-4 mt-6">
-        <%= if length(@prompts) != 2 do %>
-          Generating all responses...
-        <% else %>
+    <div id="results" phx-hook="Confetti" class="mt-6">
+      <%= if @loading do %>
+        <div class="mb-4">Preparing fight...</div>
+        <video
+          id="loading"
+          autoplay
+          loop
+          src="https://github.com/replicate/zoo/assets/14149230/fed424ea-9083-4148-9eec-6b1098ee46ed"
+        >
+        </video>
+      <% else %>
+        <h5 :if={@submitted} id="header" class="text-2xl font-bold">
+          Which is a better response?
+        </h5>
+        <div class="grid grid-cols-2 gap-4 mt-6">
           <%= for prompt <- @prompts do %>
             <div class={"#{if not is_nil(@round_winner) and @round_winner.model == prompt.model, do: "text-green-500"} border font-mono rounded-lg relative p-4 shadow-lg hover:shadow-xl hover:bg-gray-100"}>
               <p :if={@show_results} class="model font-bold mb-4">
                 <%= prompt.model %>
               </p>
               <button
-                phx-click={
-                  JS.hide(to: ".select-button")
-                  |> JS.push("select")
-                }
+                :if={not @show_results}
+                phx-click="select"
                 phx-value-id={prompt.id}
                 phx-value-submission-id={prompt.submission_id}
                 class="absolute inset-0 select-button"
@@ -74,8 +97,8 @@
               <p><%= prompt.completion %></p>
             </div>
           <% end %>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
   <% end %>
 
@@ -84,12 +107,37 @@
       <p>
         <%= @snarky_response %>
       </p>
-      <button
-        class="font-fight mt-6 text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
-        phx-click="next"
-      >
-        Next Round
-      </button>
+      <p class="text-xs italic text-gray-500">snark provided by gpt-4</p>
+
+      <%= if @winner do %>
+        <button
+          class="font-fight mt-6 text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
+          phx-click="next"
+        >
+          Next Round &rarr;
+        </button>
+      <% else %>
+        <.link navigate="/">Play Again</.link>
+      <% end %>
     </div>
+  <% end %>
+
+  <%= if @winner do %>
+    <.modal id="winner" show>
+      <div>
+        <.header>
+          <%= @winner.human_name %> wins!
+        </.header>
+        <div class="mt-4">
+          <h5>Results:</h5>
+          <span id="results">
+            <%= for emoji <- @vote_emojis do %>
+              <%= emoji %>
+            <% end %>
+          </span>
+          <button id="CopyClipboard" phx-hook="CopyToClipboard">Share Results</button>
+        </div>
+      </div>
+    </.modal>
   <% end %>
 </div>
