--- a/lib/boxing_web/components/layouts/root.html.heex
+++ b/lib/boxing_web/components/layouts/root.html.heex
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
     <.live_title suffix="">
-      <%= assigns[:page_title] || "Llama Boxing" %>
+      <%= assigns[:page_title] || "Model Streetfight" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Llama Boxing" />
+    <meta name="twitter:title" content="Model Streetfight" />
     <meta name="twitter:description" content="Language Model Face Off" />
     <meta
       property="twitter:image"
@@ -23,8 +23,8 @@
       property="og:image"
       content="https://github.com/replicate/zoo/assets/14149230/71776766-e4fa-4565-8e82-f257797b9612"
     />
-    <meta property="og:url" content="https://metarquiz.com" />
-    <meta property="og:description" content="Practice decoding METARs" />
+    <meta property="og:url" content="https://modelstreetfight.com" />
+    <meta property="og:description" content="Language Model Face Off" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
