--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -17,7 +17,7 @@
       </button>
     </div>
   <% else %>
-    <div class="absolute top-2 right-2">
+    <div class="absolute top-2 right-2 font-fight">
       <div class="w-96">
         <dl class="mt-5 grid gap-5 grid-cols-2">
           <%= for score <- @score do %>
@@ -81,11 +81,14 @@
           Which is a better response?
         </h5>
         <div class="grid grid-cols-2 gap-4 mt-6">
-          <%= for prompt <- @prompts do %>
+          <%= for {prompt, i} <- @prompts |> Enum.with_index() do %>
             <div class={"#{if not is_nil(@round_winner) and @round_winner.model == prompt.model, do: "text-green-500"} border font-mono rounded-lg relative p-4 shadow-lg hover:shadow-xl hover:bg-gray-100"}>
-              <p :if={@show_results} class="model font-bold mb-4">
-                <%= prompt.model %>
+              <p class="model font-bold mb-4">
+                <%= if @show_results,
+                  do: prompt.model,
+                  else: "Contestant #{i + 1}" %>
               </p>
+
               <button
                 :if={not @show_results}
                 phx-click="select"
@@ -109,7 +112,7 @@
       </p>
       <p class="text-xs italic text-gray-500">snark provided by gpt-4</p>
 
-      <%= if @winner do %>
+      <%= if is_nil(@winner) do %>
         <button
           class="font-fight mt-6 text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
           phx-click="next"
@@ -117,7 +120,12 @@
           Next Round &rarr;
         </button>
       <% else %>
-        <.link navigate="/">Play Again</.link>
+        <.link
+          class="font-fight mt-6 text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
+          navigate="/"
+        >
+          Play Again
+        </.link>
       <% end %>
     </div>
   <% end %>
@@ -129,13 +137,13 @@
           <%= @winner.human_name %> wins!
         </.header>
         <div class="mt-4">
-          <h5>Results:</h5>
           <span id="results">
+            LlamaFight Results:
             <%= for emoji <- @vote_emojis do %>
               <%= emoji %>
             <% end %>
           </span>
-          <button id="CopyClipboard" phx-hook="CopyToClipboard">Share Results</button>
+          <.button id="CopyClipboard" phx-hook="CopyToClipboard">Share Results</.button>
         </div>
       </div>
     </.modal>
