--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -3,7 +3,11 @@
     <div class="flex font-fight items-center gap-4">
       <a href="/">
         <span>🥊</span>
-        <img src="/assets/logo.png" class="h-12 mx-auto inline-flex" alt="" />
+        <img
+          src="https://github.com/replicate/zoo/assets/14149230/35b4d236-2a12-465c-8e55-05a282b75ed5"
+          class="h-12 mx-auto inline-flex"
+          alt=""
+        />
       </a>
     </div>
   </div>
