--- a/lib/boxing_web/components/layouts/root.html.heex
+++ b/lib/boxing_web/components/layouts/root.html.heex
@@ -12,7 +12,7 @@
     </script>
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Model Streetfight" />
+    <meta name="twitter:title" content="Model Streetfight • Choose your Champion" />
     <meta name="twitter:description" content="Language Model Face Off" />
     <meta
       property="twitter:image"
