--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -1,12 +1,11 @@
 <div id="start" phx-hook="Bell">
   <%= if @prefight do %>
-    <div class="font-fight text-center mt-4 text-2xl max-w-xl mx-auto">
+    <div class="text-center mt-8 text-2xl max-w-xl mx-auto">
       <p>
         <a class="underline" href="https://ai.meta.com/llama/">Llama2</a>
         has taken the world by storm. Many have
         claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>.
-        <br /><br />
-        The fight will be first to 3 rounds. Each round, pick the output you think is better.
+        <br /><br /> Each round, pick the output you think is better. Each model has 10 hitpoints.
         <br /><br /> Enough talk. Let's settle this in the ring.
       </p>
       <button
