--- a/lib/boxing_web/live/prompt_live/index.html.heex
+++ b/lib/boxing_web/live/prompt_live/index.html.heex
@@ -12,6 +12,7 @@
   rows={@streams.prompt_collection}
   row_click={fn {_id, prompt} -> JS.navigate(~p"/prompts/#{prompt}") end}
 >
+  <:col :let={{_id, prompt}} label="Completion"><%= prompt.prompt %></:col>
   <:col :let={{_id, prompt}} label="Completion"><%= prompt.completion %></:col>
   <:col :let={{_id, prompt}} label="Model"><%= prompt.model %></:col>
   <:col :let={{_id, prompt}} label="Version"><%= prompt.version %></:col>
