--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between border-b border-zinc-100 py-3">
     <div class="flex font-fight items-center gap-4">
       <a href="/">
-        <img src="/assets/logo.png" class="h-12 mx-auto inline-flex" alt="" />
+        <img src={~p"/images/logo.png"} class="h-12 mx-auto inline-flex" alt="" />
       </a>
     </div>
   </div>
