--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -5,6 +5,9 @@
         <img src={~p"/images/logo.png"} class="h-12 mx-auto inline-flex" alt="" />
       </a>
     </div>
+    <a class="font-fight" href="/leaderboard">
+      Results
+    </a>
   </div>
 </header>
 <main class="px-12 py-4">
