--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -1,6 +1,6 @@
 <div id="start" class="max-w-3xl mx-auto" phx-hook="Bell">
   <%= if @prefight do %>
-    <div class="text-center mt-8 text-2xl max-w-xl mx-auto">
+    <div class="text-center mt-8 text-2xl max-w-xl mx-auto font-fight">
       <img
         src="https://github.com/replicate/zoo/assets/14149230/33200a52-b615-4f77-ba01-03a1a9ad4d78"
         alt="llama 2 vs gpt-3.5 fight preview"
