llama sound effects

--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -5,9 +5,17 @@
         <img src={~p"/images/logo.png"} class="h-12 mx-auto inline-flex" alt="" />
       </a>
     </div>
-    <a class="font-fight" href="/leaderboard">
-      Results
-    </a>
+    <div class="font-fight">
+      <a
+        class="pr-6"
+        href="https://replicate.com/replicate/llama70b-v2-chat?utm_project=llmboxing"
+      >
+        Run on Replicate
+      </a>
+      <a href="/leaderboard">
+        Results
+      </a>
+    </div>
   </div>
 </header>
 <main class="px-12 py-4">
