--- a/lib/boxing_web/components/layouts/root.html.heex
+++ b/lib/boxing_web/components/layouts/root.html.heex
@@ -14,15 +14,9 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="LLM Boxing • Choose your Champion" />
     <meta name="twitter:description" content="Language Model Face Off" />
-    <meta
-      property="twitter:image"
-      content="https://github.com/replicate/zoo/assets/14149230/33200a52-b615-4f77-ba01-03a1a9ad4d78"
-    />
+    <meta property="twitter:image" content={~p"/images/stats.png"} />
     <meta property="og:type" content="image" />
-    <meta
-      property="og:image"
-      content="https://github.com/replicate/zoo/assets/14149230/33200a52-b615-4f77-ba01-03a1a9ad4d78"
-    />
+    <meta property="og:image" content={~p"/images/stats.png"} />
     <meta property="og:url" content="https://llmboxing.com" />
     <meta property="og:description" content="Language Model Face Off" />
 
