--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -1,6 +1,6 @@
 <div id="start" class="max-w-3xl mx-auto" phx-hook="Timer">
   <%= if @prefight do %>
-    <div class="text-center mt-8 text-2xl max-w-xl mx-auto font-fight">
+    <div class="text-center mt-8 pb-24 text-2xl max-w-xl mx-auto font-fight">
       <img
         src={~p"/images/stats.png"}
         alt="llama 2 vs gpt-3.5 fight preview"
