--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -9,7 +9,7 @@
       <p>
         <a class="underline" href="https://ai.meta.com/llama/">Llama2</a>
         has taken the world by storm. Many have
-        claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>. LLM Boxing is a game that helps us get to the bottom of this.
+        claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>.
         <br /><br /> Each round, pick the output you think is better. Each model has 10 hitpoints.
         <br /><br /> Enough talk. Let's settle this in the ring.
       </p>
