--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -18,7 +18,7 @@
     </div>
   </div>
 </header>
-<main class="px-12 py-4">
+<main class="px-4 sm:px-12 py-4">
   <div class="mx-auto">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
