--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -62,7 +62,7 @@
       </h5>
 
       <%= if @show_results do %>
-        <div class="text-center mx-auto my-10 font-bold">
+        <div class="text-center mx-auto font-bold">
           <%= if is_nil(@winner) do %>
             <button
               id="next"
