--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -8,7 +8,7 @@
     <div class="font-fight">
       <a
         class="pr-6"
-        href="https://replicate.com/replicate/llama70b-v2-chat?utm_project=llmboxing"
+        href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project"
       >
         Run on Replicate
       </a>
