--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -155,7 +155,7 @@
           <div class="mt-12 grid grid-cols-2 gap-4">
             <.button id="CopyClipboard" phx-hook="CopyToClipboard">Copy Results</.button>
             <div>
-              <.link href="https://replicate.com/replicate/llama70b-v2-chat?utm_project=llmboxing">
+              <.link href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project">
                 <.button>
                   Are you a developer? Run Llama2 Replicate &rarr;
                 </.button>
