--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -110,7 +110,7 @@
 
       <div class="grid grid-cols-2 gap-4 mt-10">
         <%= for {prompt, i} <- @prompts |> Enum.with_index() do %>
-          <div class="h-96  overflow-y-scroll border text-xs sm:text-base font-mono rounded-lg relative p-4 shadow-lg hover:shadow-xl hover:bg-gray-100">
+          <div class="overflow-y-scroll border text-xs sm:text-base font-mono rounded-lg relative p-4 shadow-lg hover:shadow-xl hover:bg-gray-100">
             <button
               class="text-left"
               phx-click={
