--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -52,7 +52,14 @@
     </div>
 
     <div class="mt-16">
-      <h5 class="text-xl sm:text-4xl font-bold">"<%= @text_prompt %>"</h5>
+      <h5 class="text-xl sm:text-4xl font-bold">
+        "<%= @text_prompt
+        |> String.replace(
+          ". Answer as succintly as possible. Maximum response len
+gth of 1 paragraph.",
+          ""
+        ) %>"
+      </h5>
     </div>
 
     <div id="results" phx-hook="Confetti" class="mt-6">
