--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -15,11 +15,27 @@
         <p>Each round, pick the output you think is better. Each model has 10 hitpoints.</p>
         <p>Enough talk. Let's settle this in the ring.</p>
 
+        <div class="relative flex justify-center">
+          <form class="flex h-6 items-center" phx-change="handle-check">
+            <input
+              id="sounds"
+              aria-describedby="sounds-description"
+              name="sounds"
+              checked={@sounds}
+              type="checkbox"
+              class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-600"
+            />
+          </form>
+          <div class="ml-3 text-sm leading-6">
+            <label for="sounds" class="font-medium text-gray-900">I like sound effects</label>
+          </div>
+        </div>
+
         <button
           phx-click="start"
-          class="mt-6 text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
+          class="mt-6 font-fight text-white bg-red-600 px-4 py-2 rounded-lg hover:bg-red-500"
         >
-          Start Fight
+          Begin
         </button>
       </div>
     </div>
@@ -36,7 +52,7 @@
                 <%= score.human_name %>
               </dt>
               <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">
-                <%= score.health %> Hit Points
+                <%= score.health %> <span class="text-sm">Hit Points Remaining</span>
                 <div class={"#{if i == 1, do: "transform scale-x-[-1]"} w-full bg-red-200 rounded-full h-2.5 mb-4"}>
                   <div
                     class="bg-blue-600 h-2.5 rounded-full"
@@ -52,22 +68,49 @@
     </div>
 
     <div class="mt-16">
-      <h5 class="text-xl sm:text-4xl font-bold">
-        "<%= String.replace(
-          @text_prompt,
-          ". Answer as succintly as possible. Maximum response length of 1 paragraph.",
-          ""
-        ) %>"
-      </h5>
+      <section class="isolate overflow-hidden bg-white px-6 lg:px-8">
+        <div class="relative mx-auto max-w-2xl py-12 lg:max-w-4xl">
+          <figure class="grid grid-cols-1 items-center gap-x-6 gap-y-8 lg:gap-x-10">
+            <div class="relative col-span-2 lg:col-start-1 lg:row-start-2">
+              <svg
+                viewBox="0 0 162 128"
+                fill="none"
+                aria-hidden="true"
+                class="absolute -top-12 left-0 -z-10 h-32 stroke-gray-900/10"
+              >
+                <path
+                  id="b56e9dab-6ccb-4d32-ad02-6b4bb5d9bbeb"
+                  d="M65.5697 118.507L65.8918 118.89C68.9503 116.314 71.367 113.253 73.1386 109.71C74.9162 106.155 75.8027 102.28 75.8027 98.0919C75.8027 94.237 75.16 90.6155 73.8708 87.2314C72.5851 83.8565 70.8137 80.9533 68.553 78.5292C66.4529 76.1079 63.9476 74.2482 61.0407 72.9536C58.2795 71.4949 55.276 70.767 52.0386 70.767C48.9935 70.767 46.4686 71.1668 44.4872 71.9924L44.4799 71.9955L44.4726 71.9988C42.7101 72.7999 41.1035 73.6831 39.6544 74.6492C38.2407 75.5916 36.8279 76.455 35.4159 77.2394L35.4047 77.2457L35.3938 77.2525C34.2318 77.9787 32.6713 78.3634 30.6736 78.3634C29.0405 78.3634 27.5131 77.2868 26.1274 74.8257C24.7483 72.2185 24.0519 69.2166 24.0519 65.8071C24.0519 60.0311 25.3782 54.4081 28.0373 48.9335C30.703 43.4454 34.3114 38.345 38.8667 33.6325C43.5812 28.761 49.0045 24.5159 55.1389 20.8979C60.1667 18.0071 65.4966 15.6179 71.1291 13.7305C73.8626 12.8145 75.8027 10.2968 75.8027 7.38572C75.8027 3.6497 72.6341 0.62247 68.8814 1.1527C61.1635 2.2432 53.7398 4.41426 46.6119 7.66522C37.5369 11.6459 29.5729 17.0612 22.7236 23.9105C16.0322 30.6019 10.618 38.4859 6.47981 47.558L6.47976 47.558L6.47682 47.5647C2.4901 56.6544 0.5 66.6148 0.5 77.4391C0.5 84.2996 1.61702 90.7679 3.85425 96.8404L3.8558 96.8445C6.08991 102.749 9.12394 108.02 12.959 112.654L12.959 112.654L12.9646 112.661C16.8027 117.138 21.2829 120.739 26.4034 123.459L26.4033 123.459L26.4144 123.465C31.5505 126.033 37.0873 127.316 43.0178 127.316C47.5035 127.316 51.6783 126.595 55.5376 125.148L55.5376 125.148L55.5477 125.144C59.5516 123.542 63.0052 121.456 65.9019 118.881L65.5697 118.507Z"
+                />
+                <use href="#b56e9dab-6ccb-4d32-ad02-6b4bb5d9bbeb" x="86" />
+              </svg>
+              <blockquote class="text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
+                <p>
+                  <%= String.replace(
+                    @text_prompt,
+                    ". Answer as succintly as possible. Maximum response length of 1 paragraph.",
+                    ""
+                  ) %>
+                </p>
+              </blockquote>
+            </div>
+          </figure>
+        </div>
+      </section>
     </div>
 
     <div id="results" phx-hook="Confetti" class="mt-6">
-      <h5 :if={not @show_results} id="header" phx-hook="Bell" class="text-xl text-gray-700">
-        Which is a better response? <span>(Models are shuffled each round)</span>
+      <h5
+        :if={not @show_results}
+        id="header"
+        phx-hook="Bell"
+        class="text-xl text-gray-700 text-center"
+      >
+        Which is a better response?
       </h5>
 
       <%= if @show_results do %>
-        <div class="text-center mx-auto my-10 font-bold">
+        <div class="text-center mx-auto mb-10 font-bold">
           <%= if is_nil(@winner) do %>
             <button
               type="button"
@@ -116,7 +159,7 @@
 
       <div class="grid grid-cols-2 gap-4 mt-10">
         <%= for {prompt, i} <- @prompts |> Enum.with_index() do %>
-          <div class="overflow-y-scroll border text-xs sm:text-base font-mono rounded-lg relative p-4 shadow-lg hover:shadow-xl hover:bg-gray-100">
+          <div class={"overflow-y-scroll #{if not is_nil(@round_winner) and @round_winner.model == prompt.model, do: "shadow-green-500"} border text-xs sm:text-base font-mono rounded-lg relative p-4 shadow-lg #{if not @show_results, do: "hover:shadow-xl hover:bg-gray-100"} "}>
             <button
               class="text-left"
               phx-click={
