--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -1,4 +1,4 @@
-<div id="start" class="max-w-3xl mx-auto" phx-hook="Timer">
+<div id="start" class="max-w-3xl mx-auto mb-24" phx-hook="Timer">
   <%= if @prefight do %>
     <div class="text-center mt-8 pb-24 text-2xl max-w-xl mx-auto">
       <img
