--- a/lib/boxing_web/components/layouts/app.html.heex
+++ b/lib/boxing_web/components/layouts/app.html.heex
@@ -10,7 +10,7 @@
         class="pr-6"
         href="https://replicate.com/replicate/llama70b-v2-chat?utm_campaign=llmboxing&utm_source=project"
       >
-        Run on Replicate
+        Run Llama Yourself
       </a>
       <a href="/leaderboard">
         Results
