--- a/lib/boxing_web/live/quiz_live/index.html.heex
+++ b/lib/boxing_web/live/quiz_live/index.html.heex
@@ -10,9 +10,9 @@
         <p>
           <a class="underline" href="https://ai.meta.com/llama/">Llama2</a>
           has taken the world by storm. Many have
-          claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>.
+          claimed <a class="underline" href="https://news.ycombinator.com/item?id=36778932">performance similar to OpenAI's GPT-3.5</a>. Let's put that to the test.
         </p>
-        <p>Each round, pick the output you think is better. Each model has 10 hitpoints.</p>
+        <p>Each round, pick the output you think is better. Each model has 5 hitpoints.</p>
         <p>Enough talk. Let's settle this in the ring.</p>
 
         <div class="relative flex justify-center">
